# VictoryGroupTest_tast

./: Dockerfile  README.md  alembic.ini  bot.py  docker-compose.yml  init_roles.py  pyproject.toml  timezone_fix.py
alembic/: env.py
alembic/versions/: 112674ddae17_initial_migration_with_proper_enums.py  8eecb0c276e3_remove_timezone_from_datetime_fields.py  d96d47d2955a_remove_timezone_from_datetime_fields.py  ec86a99ea14f_add_multimedia_support_with_default.py
grafana/provisioning/datasources/: loki.yml
handlers/: admin.py  common.py  moderator.py  register.py
keyboards/: inline.py
middlewares/: auth.py
models/: __init__.py  database.py  enums.py  models.py
services/: newsletter_service.py  scheduler.py  user_service.py
states/: admin.py  moderator.py  register.py
utils/: logger.py
